# zap-api-rust

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
examples/: main.rs  scan_report.rs
src/: acsrf.rs  ajax_spider.rs  alert.rs  alert_filter.rs  ascan.rs  authentication.rs  authorization.rs  autoupdate.rs  brk.rs  context.rs  core.rs  forced_user.rs  http_sessions.rs  import_log_files.rs  importurls.rs  lib.rs  local_proxies.rs  openapi.rs  params.rs  pnh.rs  pscan.rs  replacer.rs  reveal.rs  rule_config.rs  script.rs  search.rs  selenium.rs  session_management.rs  soap.rs  spider.rs  stats.rs  users.rs  websocket.rs
