[package]
name = "zap_api"
version = "0.0.2"
authors = ["Simon Bennetts <psiinon@gmail.com>"]
edition = "2018"
description = "The Rust implementation to access the OWASP ZAP API"
repository = "https://github.com/zaproxy/zap-api-rust"
keywords = ["owasp", "zap", "zaproxy", "api"]
license = "Apache-2.0"

[dependencies]
reqwest = "0.9.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
